--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
-    "name": "diezit/coachview-connector",
-    "description": "Library to connect to the CoachView REST API",
-    "type": "library",
-    "license": "proprietary",
-    "autoload": {
-        "psr-4": {
-            "Diezit\\CoachviewConnector\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Robin van Schuilenburg",
-            "email": "robin@diezit.nl"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {}
+  "name": "diezit/coachview-connector",
+  "description": "Library to connect to the CoachView REST API",
+  "type": "library",
+  "license": "proprietary",
+  "autoload": {
+    "psr-4": {
+      "Diezit\\CoachviewConnector\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Robin van Schuilenburg",
+      "email": "robin@diezit.nl"
+    }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": "^7.2.5 || ^8.0",
+    "guzzlehttp/guzzle": "^7.3",
+    "nesbot/carbon": "^2.16"
+  }
 }
